--- a/draganddrop/package.json
+++ b/draganddrop/package.json
@@ -7,21 +7,45 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "build:dev": "webpack",
-    "build:prod": "webpack --config webpack.config.prod.js"
+    "build:prod": "webpack --config webpack.config.prod.js",
+    "prettier:fix": "prettier --write \"./src/**/*.*\"",
+    "stylelint": "stylelint \"src/**/*.*\"",
+    "stylelint:fix": "stylelint \"src/**/*.*\" --fix"
   },
   "keywords": [
     "typescript",
     "course"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged",
+      "post-commit": "git update-index --again"
+    }
+  },
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "husky": "^4.2.5",
     "lite-server": "^2.5.4",
+    "prettier": "2.0.5",
+    "pretty-quick": "^2.0.1",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-property-sort-order-smacss": "^6.2.1",
+    "stylelint-prettier": "^1.1.2",
     "ts-loader": "^7.0.3",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-etc": "^1.10.1",
+    "tslint-plugin-prettier": "^2.3.0",
+    "rxjs-tslint-rules": "^4.32.0",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "dependencies": {}
 }
